Server.cfg cleanup and adding /setjob

--- a/server.cfg
+++ b/server.cfg
@@ -51,26 +51,32 @@ add_ace resource.ore command.remove_principal allow
 
 ###########################################################################
 ### Ace Commands
+# We will force all server side commands to use the ACL perms system, this
+# will asssit in fraud prevention and restricts usage of commands.
+
+# No Principal for Public - The default ace perm granted.
+
+# Public Commands
+add_ace group.public command.switch allow
 
 # Mod
 add_principal group.mod group.public
 
 # Mod Commands
-add_ace group.mod command.noclip allow
-add_ace group.mod command.clothes allow
+add_ace group.mod command.kick allow
 
 # Admin
 add_principal group.admin group.mod
 
 # Admin Commands
-add_ace group.admin command allow # allow all commands
-add_ace group.admin command.quit deny # but don't allow quit
+add_ace group.admin command.ban allow
 
 # Superadmin
 add_principal group.superadmin group.admin
 
 # Superadmin Commands
-
+add_ace group.superadmin command allow
+add_ace group.superadmin command.quit deny
 
 # Developer 
 add_principal group.developer group.superadmin
@@ -84,11 +90,8 @@ add_principal group.owner group.developer
 # Owner Commands
 
 
-
 ###########################################################################
 ### RESOURCES
-
-# exec resource.cfg
 
 #
 ensure mapmanager
@@ -101,10 +104,11 @@ ensure rconlog
 #
 ensure mysql-async
 ensure discordroles
-ensure freecam
 #
 ensure ore
 ensure skin
 ensure creator
 ensure clothes
 #
+
+# exec resource.cfg
